# retina

./: .gitignore  CMakeLists.txt  Makefile  MyResnet.py  README.md  animation.py  axisRotation.py  deepLearning.py  download_file_list.json  eye.py  helpers_deepLearning.py  helpers_general.py  helpers_o3d.py  helpers_retina.py  inference.py  kdtree.py  liNet.py  nengo.ipynb  onv.ipynb  open3d_tutorial.py  prog  rayCasting.py  ray_casting.py  requirements.txt  retina.py  retina_dist.npy  scene.py  simple.py  simulation.cpp  simulation_func.py  splitRetina.py  tryCasting.py  tryCircle.py
api_examples/: kdtree.py  octTree.py  open3d_tutorial.py
